--- a/index.mdx
+++ b/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: ModelsLab Documentation
-description: "Stable Diffusion & LLM API Documentation | ModelsLab"
+description: "Stable Diffusion & LLM API Documentation"
 ---
 
 <img
