feat: styling is added

--- a/api-reference/apis/video-api/texttovideo.mdx
+++ b/api-reference/apis/video-api/texttovideo.mdx
@@ -1,16 +1,30 @@
 ---
 title: "Text to Video Endpoint"
+openapi: 'POST /plants'
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
 
 Text to Video endpoint generates and returns a video based on a text description.
 
-[Open in Playground 🚀](https://videofusion.playground.modelslab.com/text-to-video)
+{/* [Open in Playground 🚀](https://videofusion.playground.modelslab.com/text-to-video) */}
+{/* <a href='https://videofusion.playground.modelslab.com/text-to-video' class="crazy-button">
+  <span>Open in Playground 🚀</span>
+</a> */}
+<a href='https://videofusion.playground.modelslab.com/text-to-video'>
+<button className='custom-button'>
+ Open in Playground 🚀
+</button>
+</a>
 
-``
 
-![Text to video endpoint result](\images\video-api\assets\images\Text-to-video-059ae4e254324cdd6b271d791167cb35.jpg)
+<video
+  controls
+  className="w-full aspect-video rounded-lg"
+  src="https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/generations/7d1af668-58e6-44f7-8d71-ee8b6e232d4d.mp4"
+></video>
+
+{/* ![Text to video endpoint result]() */}
 
 ## Request[​](#request "Direct link to Request")
 
