open-source & sdks

--- a/sdk/php.mdx
+++ b/sdk/php.mdx
@@ -1,4 +1,5 @@
 ---
-title: PHP
-description: "Stable Diffusion & LLM API Documentation"
+title: Php
+description: "Documentation for the PHP SDK"
 ---
+
