--- a/sdk/typescript.mdx
+++ b/sdk/typescript.mdx
@@ -1,4 +1,4 @@
 ---
 title: TypeScript
-description: "Stable Diffusion & LLM API Documentation"
+description: "Documentation for the TypeScript SDK"
 ---
