feat: Video playground and openapi spec

--- a/api-reference/apis/video-api/fetchvideo.mdx
+++ b/api-reference/apis/video-api/fetchvideo.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Fetch Queued Video Endpoint"
+openapi: 'POST /video/fetch/{id}'
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
