--- a/api-reference/apis/video-api/imagetovideo-ultra.mdx
+++ b/api-reference/apis/video-api/imagetovideo-ultra.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Image to Video Ultra Endpoint"
+openapi: 'POST /video/img2video_ultra'
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
