--- a/api-reference/apis/video-api/texttovideo-ultra.mdx
+++ b/api-reference/apis/video-api/texttovideo-ultra.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Text to Video Ultra Endpoint"
+openapi: 'POST /video/text2video_ultra'
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
