feat: Audio playground and openapi spec

--- a/api-reference/apis/voice-cloning/create-dubbing.mdx
+++ b/api-reference/apis/voice-cloning/create-dubbing.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Create Dubbing Endpoint"
+openapi: 'POST /voice/create_dubbing'
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
