--- a/api-reference/apis/voice-cloning/fetchvoice.mdx
+++ b/api-reference/apis/voice-cloning/fetchvoice.mdx
@@ -1,5 +1,7 @@
 ---
 title: "Fetch Queued Voice Endpoint"
+openapi: 'POST /voice/fetch/{id}'
+
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
