--- a/api-reference/apis/voice-cloning/lyrics-generator.mdx
+++ b/api-reference/apis/voice-cloning/lyrics-generator.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Lyrics Generator Endpoint"
+openapi: 'POST /voice/lyrics_generator'
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
