--- a/api-reference/apis/voice-cloning/speech-to-text.mdx
+++ b/api-reference/apis/voice-cloning/speech-to-text.mdx
@@ -1,5 +1,7 @@
 ---
 title: "Speech To Text Endpoint"
+openapi: 'POST /voice/speech_to_text'
+
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
