--- a/api-reference/apis/voice-cloning/text-to-speech.mdx
+++ b/api-reference/apis/voice-cloning/text-to-speech.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Text to Speech Endpoint"
+openapi: 'POST /voice/text_to_speech'
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
