--- a/api-reference/apis/voice-cloning/upload-voice.mdx
+++ b/api-reference/apis/voice-cloning/upload-voice.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Voice Upload Endpoint"
+openapi: 'POST /voice/voice_upload'
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
