--- a/api-reference/apis/voice-cloning/vocal-isolator.mdx
+++ b/api-reference/apis/voice-cloning/vocal-isolator.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Vocal Isolator Endpoint"
+openapi: 'POST /voice/vocal_isolator'
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
