--- a/api-reference/apis/voice-cloning/voice-cloning.mdx
+++ b/api-reference/apis/voice-cloning/voice-cloning.mdx
@@ -1,5 +1,7 @@
 ---
 title: "Text to Audio Endpoint"
+openapi: 'POST /voice/text_to_audio'
+
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
