--- a/api-reference/apis/voice-cloning/voice-to-voice.mdx
+++ b/api-reference/apis/voice-cloning/voice-to-voice.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Voice to Voice Endpoint"
+openapi: 'POST /voice/voice_to_voice'
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
