--- a/api-reference/apis/voice-cloning/base64-to-url.mdx
+++ b/api-reference/apis/voice-cloning/base64-to-url.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Base64 to Url Endpoint"
+openapi: 'POST /voice/base64_to_url'
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
