--- a/api-reference/apis/voice-cloning/song-generator.mdx
+++ b/api-reference/apis/voice-cloning/song-generator.mdx
@@ -1,5 +1,7 @@
 ---
 title: "Song Generator Endpoint"
+openapi: 'POST /voice/song_generator'
+
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
