feat Uncensored chat api playground and openapi spec

--- a/api-reference/apis/uncensored-chat-api/chat-completions.mdx
+++ b/api-reference/apis/uncensored-chat-api/chat-completions.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Uncensored Chat Completions"
+openapi: 'POST /chat/completions'
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
