feat: 3d api docs playground and openapi spec

--- a/api-reference/apis/3d-api/fetch.mdx
+++ b/api-reference/apis/3d-api/fetch.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Fetch 3D Response Endpoint"
+openapi: 'POST /3d/fetch/{id}'
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
