feat: deepfake api docs playground openapi spec

--- a/api-reference/apis/deepfake-api/multiple-face-swap.mdx
+++ b/api-reference/apis/deepfake-api/multiple-face-swap.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Multiple Face Swap Endpoint"
+openapi: 'POST /deepfake/multiple_face_swap'
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
