--- a/api-reference/apis/deepfake-api/single-video-swap.mdx
+++ b/api-reference/apis/deepfake-api/single-video-swap.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Single Video Swap Endpoint"
+openapi: 'POST /deepfake/single_video_swap'
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
