--- a/api-reference/apis/deepfake-api/fetch.mdx
+++ b/api-reference/apis/deepfake-api/fetch.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Fetch Queued Request Endpoint"
+openapi : 'POST /deepfake/fetch/{id}'
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
