--- a/api-reference/apis/deepfake-api/specific-face-swap.mdx
+++ b/api-reference/apis/deepfake-api/specific-face-swap.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Specific Face Swap Endpoint"
+openapi: 'POST /deepfake/single_face_swap'
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
