--- a/api-reference/apis/deepfake-api/specific-video-swap.mdx
+++ b/api-reference/apis/deepfake-api/specific-video-swap.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Specific Video Swap Endpoint"
+openapi: 'POST /deepfake/specific_video_swap'
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
