feat: Interior api docs playground and openapi spec

--- a/api-reference/apis/interior-api/exterior-restorer.mdx
+++ b/api-reference/apis/interior-api/exterior-restorer.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Exterior Restorer Endpoint"
+openapi: 'POST /interior/exterior_restorer'
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
