--- a/api-reference/apis/interior-api/fetch.mdx
+++ b/api-reference/apis/interior-api/fetch.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Fetch Queued Request Endpoint"
+openapi: 'POST /interior/fetch/{id}'
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
