--- a/api-reference/apis/interior-api/floor-planning.mdx
+++ b/api-reference/apis/interior-api/floor-planning.mdx
@@ -1,5 +1,6 @@
 ---
-title: "Specific Floor Planning Endpoint"
+title: "Floor Planning Endpoint"
+openapi: 'POST /interior/floor_planning'
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
