--- a/api-reference/apis/interior-api/room-decorator.mdx
+++ b/api-reference/apis/interior-api/room-decorator.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Room Decorator Endpoint"
+openapi: 'POST /interior/room_decorator'
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
