--- a/api-reference/apis/interior-api/sketch-rendering.mdx
+++ b/api-reference/apis/interior-api/sketch-rendering.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Sketch Rendering Endpoint"
+openapi: 'POST /interior/sketch_rendering'
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
