--- a/api-reference/apis/interior-api/scenario-changer.mdx
+++ b/api-reference/apis/interior-api/scenario-changer.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Scenario Changer Endpoint"
+openapi: 'POST /interior/scenario_changer'
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
