feat: general apis docs playground and openapi spec

--- a/api-reference/apis/general-api/base64-crop.mdx
+++ b/api-reference/apis/general-api/base64-crop.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Upload Base64 Image and Crop"
+openapi: 'POST /base64_crop'
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
