--- a/api-reference/apis/general-api/buy-model.mdx
+++ b/api-reference/apis/general-api/buy-model.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Automatically Buy Lora Model"
+openapi: 'POST /dreambooth/buy_model'
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
