--- a/api-reference/apis/general-api/buy-subscription.mdx
+++ b/api-reference/apis/general-api/buy-subscription.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Automatically Buy Subscription Plan"
+openapi: 'POST /buy_subscription'
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
