--- a/api-reference/apis/general-api/cancel-subscription.mdx
+++ b/api-reference/apis/general-api/cancel-subscription.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Automatically Cancel Subscription Plan"
+openapi: 'POST /cancel_subscription'
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
