feat: general apis docs playground and openapi spec

--- a/api-reference/apis/general-api/clear-cache.mdx
+++ b/api-reference/apis/general-api/clear-cache.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Clear User Cache"
-openapi: 'POST /clear_cache'
+openapi: 'GET /clear_cache'
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
