--- a/api-reference/apis/general-api/subscribed-product.mdx
+++ b/api-reference/apis/general-api/subscribed-product.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Subscribed Product"
-openapi: 'POST /subscribed_products'
+openapi: 'GET /subscribed_products'
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
