image editing api doc playground and openapi spec

--- a/api-reference/apis/image-editing/flux-headshot.mdx
+++ b/api-reference/apis/image-editing/flux-headshot.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Enterprise: Flux Head Shot Endpoint"
+openapi: 'POST /flux_headshot'
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
