--- a/api-reference/apis/image-editing/removebg-createmask.mdx
+++ b/api-reference/apis/image-editing/removebg-createmask.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Background Removal and Create mask Endpoint"
+openapi: 'POST /removebg_mask'
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
