--- a/api-reference/apis/image-editing/super-resolution.mdx
+++ b/api-reference/apis/image-editing/super-resolution.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Super Resolution Endpoint"
+openapi: 'POST /super_resolution'
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
