--- a/first-steps.mdx
+++ b/first-steps.mdx
@@ -4,12 +4,12 @@ description: "Stable Diffusion & LLM API Documentation | ModelsLab"
 ---
 
 <img
-  className="block dark:hidden"
+  className="block dark:hidden rounded-lg"
   src="/images/hero-light.png"
   alt="Hero Light"
 />
 <img
-  className="hidden dark:block"
+  className="hidden dark:block rounded-lg"
   src="/images/hero-dark.png"
   alt="Hero Dark"
 />
