--- a/api-reference/apis/image-generation/community-models/dreambooth-image-to-image.mdx
+++ b/api-reference/apis/image-generation/community-models/dreambooth-image-to-image.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Image to Image Endpoint"
+title: "Dreambooth Image to Image"
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
