--- a/api-reference/apis/video-api/overview.mdx
+++ b/api-reference/apis/video-api/overview.mdx
@@ -1,5 +1,5 @@
 ---
-title: "VideoFusion API"
+title: "Overview"
 description: "API for generating and processing videos from text and images."
 ---
 
