--- a/api-reference/apis/video-api/scene-maker.mdx
+++ b/api-reference/apis/video-api/scene-maker.mdx
@@ -4,6 +4,12 @@ openapi: 'POST /video/scene_maker'
 description: "Generate videos from a sequence of images using the Scene Maker API."
 ---
 
+<a href='https://videofusion.playground.modelslab.com/text-to-video'>
+<button className='custom-button'>
+ Open in Playground
+</button>
+</a>
+
 ### Scene Maker
 Generate videos from a sequence of images.
 
