--- a/api-reference/apis/video-api/scene-maker.mdx
+++ b/api-reference/apis/video-api/scene-maker.mdx
@@ -24,7 +24,7 @@ Generate videos from a sequence of images.
 Make a `POST` request to [https://modelslab.com/api/v6/video/scene\_maker](https://modelslab.com/api/v6/video/scene_maker) endpoint and pass the required parameters in the request body.
 
 ## Body
-```
+```json
 {
   "key":"",
   "prompt": "a women underwater swims out just to transform into old lady",
