--- a/api-reference/apis/video-api/texttovideo-ultra.mdx
+++ b/api-reference/apis/video-api/texttovideo-ultra.mdx
@@ -23,8 +23,7 @@ Generate HD videos from text descriptions.
 Make a `POST` request to [https://modelslab.com/api/v6/video/text2video\_ultra](https://modelslab.com/api/v6/video/text2video_ultra) endpoint and pass the required parameters in the request body.
 
 ## Body
-
-```
+```json
 {
      "key":"",
      "prompt":"Space Station in space",
