--- a/api-reference/apis/video-api/imgtovideo.mdx
+++ b/api-reference/apis/video-api/imgtovideo.mdx
@@ -26,8 +26,7 @@ Make a `POST` request to [https://modelslab.com/api/v6/video/img2video](https://
 
 
 ## Body
-
-```
+```json
 {
     "key":"",
     "model_id":"svd",
