--- a/api-reference/apis/video-api/texttovideo.mdx
+++ b/api-reference/apis/video-api/texttovideo.mdx
@@ -24,7 +24,7 @@ Generate videos from text descriptions.
 Make a `POST` request to [https://modelslab.com/api/v6/video/text2video](https://modelslab.com/api/v6/video/text2video) endpoint and pass the required parameters in the request body.
 
 ## Body
-```
+```json
 {
     "key": "",
     "model_id": "cogvideox",
