--- a/api-reference/apis/uncensored-chat-api/overview.mdx
+++ b/api-reference/apis/uncensored-chat-api/overview.mdx
@@ -1,29 +1,20 @@
 ---
 title: "Uncensored Chat API"
+description: "Uncensored Chat API allows you to engage in open conversations without any restrictions, rules, or censorship."
 ---
 
-## Overview[​](#overview "Direct link to Overview")
+<a href='https://uncensored.chat/'>
+<button className='custom-button'>
+ Open in Playground
+</button>
+</a>
 
-The Uncensored Chat API allows you to engage in open conversations without any restrictions, rules, or censorship.
-
-## Available Endpoints[​](#available-endpoints "Direct link to Available Endpoints")
-
-* [uncensored\_chat](/uncensored-chat-api/uncensored-chat)
-* [uncensored\_completions](/uncensored-chat-api/completions)
-* [uncensored\_chat\_completions](/uncensored-chat-api/chat-completions)
-
-### Uncensored Chat Endpoint[​](#uncensored-chat-endpoint "Direct link to Uncensored Chat Endpoint")
+### Uncensored Chat Endpoint
 
 The Uncensored Chat endpoint allows you to create chat conversations and receive responses based on the conversation. It is highly flexible and can answer any question without restrictions.
 
-### Chat Completions Endpoint[​](#chat-completions-endpoint "Direct link to Chat Completions Endpoint")
-
+### Chat Completions endpoint
 The Uncensored Completions endpoint generates responses based on provided prompts without restrictions. It supports OpenAI SDKs and uses Bearer token authentication.
 
-### Uncensored Chat Completions Endpoint[​](#uncensored-chat-completions-endpoint "Direct link to Uncensored Chat Completions Endpoint")
-
+### Uncensored Chat Completions Endpoint
 The Chat Completions endpoint is an OpenAI-compatible API that allows you to create chat conversations and receive responses. It supports OpenAI SDKs, enabling seamless integration with minimal changes.
-
-## Playground[​](#playground "Direct link to Playground")
-
-You can try the available endpoints in our [Playground](https://uncensored.chat/) section, just make sure to [sign up](https://modelslab.com/register) first.
