--- a/index.mdx
+++ b/index.mdx
@@ -14,58 +14,171 @@ description: "Stable Diffusion & LLM API Documentation"
   alt="Hero Dark"
 />
 
-## Setting up
+## Getting Started
 
-The first step to world-class documentation is setting up your editing environments.
+Transform your ideas into reality with ModelsLab's comprehensive AI API suite. Get up and running in minutes with our developer-first platform.
 
 <CardGroup cols={2}>
   <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
+    title="Interactive Playground"
+    icon="play"
+    href="https://modelslab.com/playground"
   >
-    Get your docs set up locally for easy development
-  </Card>
-  <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
-  >
-    Preview your changes before you push to make sure they're perfect
+    Test models and experiment with parameters before integration
   </Card>
 </CardGroup>
 
-## Make it yours
+## Core AI Offerings
 
-Update your docs to your brand and add valuable content for the best user conversion.
+Explore our comprehensive suite of AI APIs designed for next-generation applications.
 
 <CardGroup cols={2}>
   <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
+    title="Image Generation"
+    icon="image"
+    href="/api-reference/apis/image-generation/image-generation"
   >
-    Customize your docs to your company's colors and brands
+    Create stunning visuals with 10,000+ Stable Diffusion models
   </Card>
   <Card
-    title="Reference APIs"
+    title="Video Creation"
+    icon="video"
+    href="/api-reference/apis/video-api/overview"
+  >
+    Generate and edit videos from text prompts and existing footage
+  </Card>
+  <Card
+    title="Voice & Audio"
+    icon="microphone"
+    href="/api-reference/apis/voice-cloning/overview"
+  >
+    Text-to-speech, voice cloning, speech-to-text.
+  </Card>
+  <Card
+    title="3D Generation"
+    icon="cube"
+    href="http://localhost:3000/api-reference/apis/3d-api/overview"
+  >
+    Transform text and images into 3D models and objects
+  </Card>
+    <Card
+    title="Uncensored Chat"
+    icon="comment"
+    href="/api-reference/apis/uncensored-chat-api/overview"
+  >
+    Enagage into conversation without censorship.
+  </Card>
+  <Card
+    title="Deepfake"
+    icon="mask"
+    href="/api-reference/apis/uncensored-chat-api/overview"
+  >
+    Generate Deepfake Videos
+  </Card>
+  
+</CardGroup>
+
+## Advanced Features
+
+Build for enterprise-grade applications.
+
+<CardGroup cols={2}>
+  <Card
+    title="Custom Model Training"
+    icon="brain"
+    href="/guides/model-training"
+  >
+    Fine-tune models with LoRa and DreamBooth on your datasets
+  </Card>
+  <Card
+    title="LLM & Chat APIs"
+    icon="comments"
+    href="/api-reference/llm"
+  >
+    Access uncensored chat and language model capabilities
+  </Card>
+  <Card
+    title="Image Editing Suite"
+    icon="wand-magic-sparkles"
+    href="/api-reference/image-editing"
+  >
+    Inpainting, outpainting, upscaling, and enhancement tools
+  </Card>
+  <Card
+    title="Deepfake & Face Swap"
+    icon="face-smile"
+    href="/api-reference/deepfake"
+  >
+    Create realistic face swaps and deepfake content
+  </Card>
+</CardGroup>
+
+## Enterprise Solutions
+
+Scale your AI applications with enterprise-grade infrastructure and support.
+
+<CardGroup cols={2}>
+  <Card
+    title="Dedicated Servers"
+    icon="server"
+    href="/enterprise/dedicated-servers"
+  >
+    Private GPU infrastructure for maximum performance
+  </Card>
+  <Card
+    title="Custom Integration"
+    icon="gear"
+    href="/enterprise/custom-integration"
+  >
+    White-label solutions and custom API development
+  </Card>
+  <Card
+    title="Pricing & Plans"
+    icon="credit-card"
+    href="/pricing"
+  >
+    Flexible pricing from startup to enterprise scale
+  </Card>
+  <Card
+    title="Enterprise Support"
+    icon="headset"
+    href="/support"
+  >
+    24/7 priority support with dedicated account management
+  </Card>
+</CardGroup>
+
+## Developer Resources
+
+Everything you need to integrate and optimize ModelsLab APIs.
+
+<CardGroup cols={2}>
+  <Card
+    title="API Reference"
     icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
+    href="/api-reference"
   >
-    Automatically generate endpoints from an OpenAPI spec
+    Complete API documentation with interactive examples
   </Card>
   <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/content/components/accordions"
+    title="SDKs & Libraries"
+    icon="box"
+    href="/sdks"
   >
-    Build interactive features and designs to guide your users
+    Official SDKs for Python, JavaScript, PHP, and more
   </Card>
   <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/customers"
+    title="Code Examples"
+    icon="file-code"
+    href="/examples"
   >
-    Check out our showcase of our favorite documentation
+    Real-world implementation examples and tutorials
+  </Card>
+  <Card
+    title="Community & Support"
+    icon="users"
+    href="/community"
+  >
+    Join our Discord community and get help from experts
   </Card>
 </CardGroup>
